# OrbitingSandRust

./: .gitignore  Cargo.toml  Justfile  README.md  STYLEGUIDE.md  cobertura.xml  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: rust.yml  rustdoc.yml
assets/shaders/: gravity_vis.wgsl  math.wgsl  nbody.wgsl
assets/shaders/lighting/: math.wgsl  types.wgsl
assets/sprites/factory_8x8/: LICENSE.md
assets/sprites/pipes_16x16/: LICENSE.md
backup/: fallingsand.rs  fallingsand_ecs.rs  gui.rs
backup/gui/: brush.rs  screen_trait.rs
backup/gui/windows/: camera_window.rs  cursor_tooltip.rs  window_trait.rs
benches/: bench_main.rs
benches/physics/fallingsand/: coordinate_directory.rs  element_directory.rs  mod.rs
orbiting_sand/: all.html  fn.main.html  fn.planet_only_setup.html  fn.solar_system_setup.html  index.html  sidebar-items.js
orbiting_sand/entities/: index.html  sidebar-items.js  struct.EntitiesPluginGroup.html
orbiting_sand/entities/celestials/: index.html  sidebar-items.js
orbiting_sand/entities/utils/: index.html  struct.Radius.html
orbiting_sand/gui/: index.html  sidebar-items.js  struct.GuiPluginGroup.html  struct.GuiUnifiedPlugin.html
orbiting_sand/gui/brush/: index.html  sidebar-items.js  struct.BrushComponent.html  struct.BrushPlugin.html
orbiting_sand/gui/camera/: fn.focus_celestial.html  fn.rect_add.html  fn.rect_overlaps.html  index.html  sidebar-items.js  struct.BackgroundLayer1.html  struct.CameraPlugin.html  struct.CelestialIdx.html  struct.MainCamera.html  struct.OverlayLayer1.html  struct.OverlayLayer2.html  (+2 more)
orbiting_sand/physics/: constant.PHYSICS_FRAME_RATE.html  index.html  sidebar-items.js  struct.PhysicsPluginGroup.html
scenes/: fallingsand.rs  fallingsand_bevy.rs
src/: entities.rs  gui.rs  jobs.rs  lib.rs  main.rs  nodes.rs  physics.rs
src/entities/: camera.rs  celestials.rs  sprites.rs  utils.rs
src/gui/: brush.rs  camera.rs  camera_window.rs  cursor_tooltip.rs  element_picker.rs  gui_trait.rs  screen_trait.rs  windows.rs
src/nodes/: brush.rs  camera.rs  celestial.rs  celestials.rs  node_trait.rs
src/orbiting_sand/: entities.rs.html  gui.rs.html  main.rs.html  physics.rs.html
src/physics/: fallingsand.rs  heat.rs  light.rs  orbits.rs  util.rs
trait.impl/strum/: trait.IntoEnumIterator.js
(+419 files in other folders)
