[package]
name = "orbiting_sand"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = true

[dependencies]
ggegui = "0.3.7"
ggez = "0.9.3"
hashbrown = { version = "0.14.2", features = ["rayon", "ahash"] }
mint = "0.5.9"
rayon = "1.8.0"
serde = "1.0.189"
serde_yaml = "0.9.25"
strum = "0.25.0"
strum_macros = "0.25.3"

[patch.crates-io]
ggez = { git="https://github.com/ryanpeach/ggez.git", branch="feature/fix-image-master" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name    = "bench_main"
harness = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "daemon"
path = "scenes/fallingsand.rs"

[net]
git-fetch-with-cli = true
