[package]
name = "orbiting_sand"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = true

[dependencies]
bevy = "0.12.1"
bevy_egui = "0.24.0"
glam = "0.25.0"
hashbrown = { version = "0.14.2", features = ["rayon", "ahash"] }
kdtree = "0.7.0"
mint = "0.5.9"
rand = "0.8.5"
rayon = "1.8.0"
serde = "1.0.189"
serde_yaml = "0.9.25"
strum = "0.25.0"
strum_macros = "0.25.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
just = "1.23.0"

[[bench]]
name    = "bench_main"
harness = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "daemon"
path = "scenes/fallingsand_bevy.rs"

[net]
git-fetch-with-cli = true
