[package]
name = "orbiting_sand"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[dependencies]
bevy = "0.12.1"
bevy_egui = "0.24.0"
bevy_eventlistener = "0.6.1"
bevy_mod_picking = { version = "0.17.0", features = ["bevy_picking_raycast"] }
bytemuck = "1.14.0"
derive_more = "0.99.17"
hashbrown = { version = "0.14.2", features = ["rayon", "ahash"] }
itertools = "0.12.1"
nabo = "0.3.0"
ndarray = { version = "0.15.6", features = ["rayon", "serde", "blas"] }
ndarray-conv = "0.2.0"
rand = "0.8.5"
rayon = "1.8.0"
strum = "0.25.0"
strum_macros = "0.25.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
just = "1.23.0"

[net]
git-fetch-with-cli = true
